# kh-blueprints

./: CLAUDE.md  README.md  docker-compose.yaml  pyproject.toml  run_tests.sh
.github/: pull_request_template.md
.github/workflows/: application-test.yml  component-build-test.yml  unit-tests.yml
applications/mcp_datastore/: docker-compose.yaml
components/data_ingestor/: Dockerfile  README.md  entrypoint.sh
components/data_ingestor/src/: ingestor.py
components/data_ingestor/src/config/: config.yaml
components/data_ingestor/src/embedders/: __init__.py  base.py  qdrant_embedder.py
components/data_ingestor/src/parsers/: __init__.py  base.py  html_parser.py
components/vector_db/: Dockerfile  entrypoint.sh
components/vector_db/src/plugins/: setup_collections.py
tests/: conftest.py  test_utils.py
tests/applications/: test_mcp_datastore.py
tests/components/: test_data_ingestor.py  test_vector_db.py
tests/unit/: test_data_ingestor.py
